tests/snapshots/sfc/ts/options_api__watch_handlers_object_and_deep.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: output.as_str()
---
import { vModelText as _vModelText, withDirectives as _withDirectives, openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue"

function _sfc_render(_ctx, _cache) {
  return _withDirectives((_openBlock(), _createElementBlock("input", {
    "onUpdate:modelValue": $event => ((_ctx.question) = $event)
  }, null, 8 /* PROPS */, ["onUpdate:modelValue"])), [
    [_vModelText, _ctx.question]
  ])
}

const _sfc_main = {
  data() {
    return { question: '', answer: '', list: [] }
  },
  watch: {
    question(newValue, oldValue) {
      this.answer = newValue
    },
    list: {
      handler(value) {
        this.answer = String(value.length)
      },
      deep: true,
      immediate: true
    }
  }
}

_sfc_main.render = _sfc_render
export default _sfc_main
