tests/snapshots/sfc/ts/options_api__watch_nested_path_string_key.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: output.as_str()
---

const _sfc_main = {
  emits: ['changed'],
  data() {
    return { form: { name: '' } }
  },
  watch: {
    'form.name'(value) {
      this.$emit('changed', value)
    }
  }
}

import { vModelText as _vModelText, withDirectives as _withDirectives, openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue"

function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
  return _withDirectives((_openBlock(), _createElementBlock("input", {
    "onUpdate:modelValue": $event => (($data.form.name) = $event)
  }, null, 8 /* PROPS */, ["onUpdate:modelValue"])), [
    [_vModelText, $data.form.name]
  ])
}
_sfc_main.render = _sfc_render
export default _sfc_main
